Alignment issues on question player

--- a/app/styles/components/content/questions/_gru-question-play.scss
+++ b/app/styles/components/content/questions/_gru-question-play.scss
@@ -1,19 +1,26 @@
 .content.questions.gru-question-play {
   .player {
     margin: 200px 10px 10px 10px;
-    .gru-question-viewer{
+    .gru-question-viewer {
+
         .question-panel,.answers-panel{
           width: 100%;
           margin-left: 0;
           @media (min-width: $screen-md) {
-            margin-left: 16px;
-            width: 47%;
+            width: 437px;
           }
         }
       .answers-panel{
         .actions, p.instructions{
           display: none;
         }
+        @media (min-width: $screen-md) {
+          margin-left: 24px;
+        }
+      }
+      @media (min-width: $screen-md) {
+        @include flexbox();
+        @include justify-content(center);
       }
     }
   }
